# mprt

./: .gitignore  LICENSE  README.md
clang_build/: CMakeCache.txt  Makefile  cmake_install.cmake
clang_build/ui_plugin_qt_autogen/: moc_predefs.h  mocs_compilation.cpp
clang_build/ui_plugin_qt_autogen/ASDJ2LDFFD/: qrc_resources.cpp
clang_build/ui_plugin_qt_autogen/SELIXXKUZU/: moc_centralwidget.cpp  moc_dock_widget.cpp  moc_mainwindow.cpp  moc_playlist_dock_widget.cpp  moc_playlist_item_delegate.cpp  moc_playlist_tabwidget.cpp  moc_playlist_view.cpp  moc_playlist_view_item_model.cpp  moc_proxy_style.cpp  moc_song_progress_widget.cpp  moc_tab_bar.cpp
config/: config.xml  config_decoder_plugin_ffmpeg.xml  config_decoder_plugin_flac.xml  config_input_plugin_file.xml  config_output_plugin_alsa.xml  config_output_plugin_dsound.xml  config_playlist_management_plugin.xml  config_tag_parser_plugin.xml  state.xml
docs/: ffmpeg_seek.txt
scripts/: build.sh  cmake_clang.sh
src/: CMakeLists.txt  main.cpp
src/common/: async_task.h  async_tasker.h  base64.h  cache_buffer.h  cache_manage.h  common_defs.h  decoder_plugin_api.h  enum_cast.h  input_plugin_api.h  job_type_enums.h  output_plugin_api.h  plugin_types.h  producerconsumerqueue.h  refcounting_plugin_api.h  scope_exit.h  server_plugin_api.h  sound_plugin_api.h  threadsafe_queue_detail.h  threadsafe_queue_stdqueue.h  type_defs.h  ui_plugin_api.h  utils.h
src/core/: config.cpp  config.h  decoder_plugins_manager.cpp  decoder_plugins_manager.h  plugins_loader.cpp  plugins_loader.h  singleton.h
src/plugins/core_plugins/playlist_management_plugin/: aaaplaylist_management_plugin.cpp  album_art.cpp  album_art.h  album_art_details.h  playlist.cpp  playlist.h  playlist_item.h  playlist_management_plugin.h  playlist_management_plugin_imp.cpp  playlist_management_plugin_imp.h  tag_lib_parser.cpp  tag_lib_parser.h  tag_parser_abstract.h
src/plugins/decoder_plugins/: decoder_plugin_ffmpeg.cpp  decoder_plugin_ffmpeg.h  decoder_plugin_flac.cpp  decoder_plugin_flac.h
src/plugins/input_plugins/: input_plugin_file.cpp  input_plugin_file.h
src/plugins/output_plugins/: output_plugin_alsa.cpp  output_plugin_alsa.h  output_plugin_dsound.cpp  output_plugin_dsound.h
src/plugins/ui_plugins/ui_plugin_qt/: centralwidget.cpp  centralwidget.h  dock_widget.cpp  dock_widget.h  mainwindow.cpp  mainwindow.h  playlist_dock_widget.cpp  playlist_dock_widget.h  playlist_item_delegate.cpp  playlist_item_delegate.h  playlist_tabwidget - dock.cpp  playlist_tabwidget - dock.h  playlist_tabwidget.cpp  playlist_tabwidget.h  playlist_view.cpp  playlist_view.h  playlist_view_item_model.cpp  playlist_view_item_model.h  proxy_style.cpp  proxy_style.h  song_progress_widget.cpp  song_progress_widget.h  tab_bar.cpp  tab_bar.h  ui_plugin_qt.cpp  ui_plugin_qt.h
src/plugins/ui_plugins/ui_plugin_qt/resources/: resources.qrc
